fix: icon align

--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -203,6 +203,7 @@
 
   @include e(icon) {
     width: 25px;
+    height: inherit;
     text-align: center;
     transition: all var(--el-transition-duration);
     vertical-align: text-bottom;
